Fixed wrong overflow of the profile screens left aside menu

--- a/webapp/src/components/screen/SelfProfileScreen/index.module.scss
+++ b/webapp/src/components/screen/SelfProfileScreen/index.module.scss
@@ -70,9 +70,11 @@
   padding-top: 1em;
 
   @media (min-width: 769px) {
+    height: 100%;
     width: 400px;
     background-color: black;
     border-right: solid 4px #440473;
+    overflow-y: scroll;
   }
 }
 
